--- a/package.json
+++ b/package.json
@@ -2,29 +2,73 @@
   "name": "timeboxing",
   "version": "0.1.0",
   "private": true,
+  "main": "electron/main.js",
+  "homepage": "./",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "export": "next build && next export",
-    "build-static": "next build"
+    "export": "next build",
+    "build-static": "next build",
+    "tauri:dev": "npx tauri dev",
+    "tauri:build": "npm run build-static && npx tauri build",
+    "electron": "electron .",
+    "electron-dev": "concurrently \"PORT=3000 npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-build": "npm run build-static && electron .",
+    "dist": "npm run build-static && electron-builder",
+    "dist-mac": "npm run build-static && electron-builder --mac"
   },
   "dependencies": {
     "dexie": "^4.2.1",
     "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "serve-handler": "^6.1.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tauri-apps/cli": "^2.8.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.2.1",
+    "electron": "^38.3.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wait-on": "^9.0.1"
+  },
+  "build": {
+    "appId": "com.timeboxing.app",
+    "productName": "时间盒",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "electron/**/*",
+      "out/**/*",
+      "package.json"
+    ],
+    "mac": {
+      "category": "public.app-category.productivity",
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ],
+      "icon": "public/app-icon.icns"
+    },
+    "dmg": {
+      "title": "时间盒安装程序",
+      "backgroundColor": "#ffffff"
+    }
   }
 }
